--- a/src/Markdig.Tests/Markdig.Tests.csproj
+++ b/src/Markdig.Tests/Markdig.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Specs\TestEmphasisPlus.cs" />
     <Compile Include="TestHtmlAttributes.cs" />
     <Compile Include="TestHtmlHelper.cs" />
+    <Compile Include="TestLatex.cs" />
     <Compile Include="TestLineReader.cs" />
     <Compile Include="TestLinkHelper.cs" />
     <Compile Include="TestOrderedList.cs" />
